--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
   },
   "dependencies": {
     "@aws-cdk/assert": "^1.83.0",
-    "@aws-cdk/aws-apigateway": "^1.83.0",
+    "@aws-cdk/aws-apigatewayv2": "^1.83.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.83.0",
     "@aws-cdk/aws-codepipeline": "^1.83.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.83.0",
     "@aws-cdk/aws-lambda": "^1.83.0",
