--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@aws-cdk/assert": "^1.97.0",
     "@aws-cdk/aws-apigatewayv2": "^1.97.0",
+    "@aws-cdk/aws-apigatewayv2-authorizers": "^1.97.0",
     "@aws-cdk/aws-apigatewayv2-integrations": "^1.97.0",
     "@aws-cdk/aws-codepipeline": "^1.97.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.97.0",
