--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
     "url": "https://github.com/nikovirtala/cdk-pipelines-demo.git"
   },
   "scripts": {
-    "projen": "npx projen",
-    "start": "npx projen start",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
     "test:compile": "npx projen test:compile",
@@ -15,12 +13,13 @@
     "bump": "npx projen bump",
     "release": "npx projen release",
     "projen:upgrade": "npx projen projen:upgrade",
-    "watch": "npx projen watch",
     "eslint": "npx projen eslint",
     "synth": "npx projen synth",
     "deploy": "npx projen deploy",
     "destroy": "npx projen destroy",
-    "diff": "npx projen diff"
+    "diff": "npx projen diff",
+    "projen": "npx projen",
+    "start": "npx projen start"
   },
   "author": {
     "name": "Niko Virtala",
@@ -33,7 +32,7 @@
     "@types/node": "^10.17.0",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
-    "aws-cdk": "^1.94.1",
+    "aws-cdk": "^1.97.0",
     "esbuild": "0",
     "eslint": "^7.17.0",
     "eslint-import-resolver-node": "^0.3.4",
@@ -41,21 +40,22 @@
     "eslint-plugin-import": "^2.22.1",
     "json-schema": "^0.3.0",
     "prettier": "^2.2.1",
-    "projen": "^0.17.16",
+    "projen": "^0.17.30",
     "standard-version": "^9",
     "ts-node": "^9.1.1",
     "typescript": "^3.9.5"
   },
   "dependencies": {
-    "@aws-cdk/assert": "^1.94.1",
-    "@aws-cdk/aws-apigatewayv2": "^1.94.1",
-    "@aws-cdk/aws-apigatewayv2-integrations": "^1.94.1",
-    "@aws-cdk/aws-codepipeline": "^1.94.1",
-    "@aws-cdk/aws-codepipeline-actions": "^1.94.1",
-    "@aws-cdk/aws-lambda": "^1.94.1",
-    "@aws-cdk/aws-lambda-nodejs": "^1.94.1",
-    "@aws-cdk/core": "^1.94.1",
-    "@aws-cdk/pipelines": "^1.94.1"
+    "@aws-cdk/assert": "^1.97.0",
+    "@aws-cdk/aws-apigatewayv2": "^1.97.0",
+    "@aws-cdk/aws-apigatewayv2-authorizers": "^1.97.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.97.0",
+    "@aws-cdk/aws-codepipeline": "^1.97.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.97.0",
+    "@aws-cdk/aws-lambda": "^1.97.0",
+    "@aws-cdk/aws-lambda-nodejs": "^1.97.0",
+    "@aws-cdk/core": "^1.97.0",
+    "@aws-cdk/pipelines": "^1.97.0"
   },
   "bundledDependencies": [],
   "license": "MIT",
