--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -1,8 +1,35 @@
 {
   "tasks": {
+    "build": {
+      "name": "build",
+      "description": "Full release build",
+      "steps": [
+        {
+          "spawn": "default"
+        },
+        {
+          "spawn": "pre-compile"
+        },
+        {
+          "spawn": "compile"
+        },
+        {
+          "spawn": "post-compile"
+        },
+        {
+          "spawn": "test"
+        },
+        {
+          "spawn": "package"
+        }
+      ]
+    },
+    "bundle": {
+      "name": "bundle",
+      "description": "Prepare assets"
+    },
     "clobber": {
       "name": "clobber",
-      "category": "30.maintain",
       "description": "hard resets to HEAD of origin and cleans the local repo",
       "env": {
         "BRANCH": "$(git branch --show-current)"
@@ -35,97 +62,60 @@
     },
     "compile": {
       "name": "compile",
-      "category": "00.build",
       "description": "Only compile"
     },
-    "test:compile": {
-      "name": "test:compile",
-      "category": "10.test",
-      "description": "compiles the test code"
-    },
-    "test": {
-      "name": "test",
-      "category": "10.test",
-      "description": "Run tests",
+    "default": {
+      "name": "default",
+      "description": "Synthesize project files",
       "steps": [
         {
-          "spawn": "test:compile"
-        },
-        {
-          "spawn": "eslint"
+          "exec": "node .projenrc.js"
         }
       ]
     },
-    "build": {
-      "name": "build",
-      "category": "00.build",
-      "description": "Full release build (test+compile)",
+    "deploy": {
+      "name": "deploy",
+      "description": "Deploys your CDK app to the AWS cloud",
       "steps": [
         {
-          "exec": "npx projen"
-        },
-        {
-          "spawn": "test"
-        },
-        {
-          "spawn": "compile"
-        },
-        {
-          "spawn": "synth"
+          "exec": "cdk deploy",
+          "receiveArgs": true
         }
       ]
     },
-    "bump": {
-      "name": "bump",
-      "category": "20.release",
-      "description": "Commits a bump to the package version based on conventional commits",
+    "destroy": {
+      "name": "destroy",
+      "description": "Destroys your cdk app in the AWS cloud",
       "steps": [
         {
-          "exec": "standard-version"
-        }
-      ],
-      "condition": "! git log --oneline -1 | grep -q \"chore(release):\""
-    },
-    "release": {
-      "name": "release",
-      "category": "20.release",
-      "description": "Bumps version & push to main",
-      "steps": [
-        {
-          "spawn": "bump"
-        },
-        {
-          "exec": "git push --follow-tags origin main"
-        }
-      ],
-      "condition": "! git log --oneline -1 | grep -q \"chore(release):\""
-    },
-    "projen:upgrade": {
-      "name": "projen:upgrade",
-      "category": "30.maintain",
-      "description": "upgrades projen to the latest version",
-      "steps": [
-        {
-          "exec": "yarn upgrade -L projen"
-        },
-        {
-          "exec": "CI=\"\" yarn projen"
+          "exec": "cdk destroy",
+          "receiveArgs": true
         }
       ]
     },
-    "watch": {
-      "name": "watch",
-      "category": "00.build",
-      "description": "Watch & compile in the background",
+    "diff": {
+      "name": "diff",
+      "description": "Diffs the currently deployed app against your code",
       "steps": [
         {
-          "exec": "tsc -w"
+          "exec": "cdk diff"
+        }
+      ]
+    },
+    "eject": {
+      "name": "eject",
+      "description": "Remove projen from the project",
+      "env": {
+        "PROJEN_EJECTING": "true"
+      },
+      "steps": [
+        {
+          "spawn": "default"
         }
       ]
     },
     "eslint": {
       "name": "eslint",
-      "category": "10.test",
       "description": "Runs eslint against the codebase",
       "steps": [
         {
@@ -133,43 +123,102 @@
         }
       ]
     },
+    "package": {
+      "name": "package",
+      "description": "Creates the distribution package"
+    },
+    "post-compile": {
+      "name": "post-compile",
+      "description": "Runs after successful compilation",
+      "steps": [
+        {
+          "spawn": "synth:silent"
+        }
+      ]
+    },
+    "post-upgrade": {
+      "name": "post-upgrade",
+      "description": "Runs after upgrading dependencies"
+    },
+    "pre-compile": {
+      "name": "pre-compile",
+      "description": "Prepare the project for compilation"
+    },
     "synth": {
       "name": "synth",
-      "category": "00.build",
-      "description": "Synthesizes your cdk app into cdk.out (part of \"yarn build\")",
+      "description": "Synthesizes your cdk app into cdk.out",
       "steps": [
         {
           "exec": "cdk synth"
         }
       ]
     },
-    "deploy": {
-      "name": "deploy",
-      "category": "20.release",
-      "description": "Deploys your CDK app to the AWS cloud",
+    "synth:silent": {
+      "name": "synth:silent",
+      "description": "Synthesizes your cdk app into cdk.out and suppresses the template in stdout (part of \"yarn build\")",
       "steps": [
         {
-          "exec": "cdk deploy"
+          "exec": "cdk synth -q"
         }
       ]
     },
-    "destroy": {
-      "name": "destroy",
-      "category": "20.release",
-      "description": "Destroys your cdk app in the AWS cloud",
+    "test": {
+      "name": "test",
+      "description": "Run tests",
       "steps": [
         {
-          "exec": "cdk destroy"
+          "spawn": "eslint"
         }
       ]
     },
-    "diff": {
-      "name": "diff",
-      "category": "99.misc",
-      "description": "Diffs the currently deployed app against your code",
+    "upgrade": {
+      "name": "upgrade",
+      "description": "upgrade dependencies",
+      "env": {
+        "CI": "0"
+      },
       "steps": [
         {
-          "exec": "cdk diff"
+          "exec": "yarn upgrade npm-check-updates"
+        },
+        {
+          "exec": "npm-check-updates --dep dev --upgrade --target=minor"
+        },
+        {
+          "exec": "npm-check-updates --dep optional --upgrade --target=minor"
+        },
+        {
+          "exec": "npm-check-updates --dep peer --upgrade --target=minor"
+        },
+        {
+          "exec": "npm-check-updates --dep prod --upgrade --target=minor"
+        },
+        {
+          "exec": "npm-check-updates --dep bundle --upgrade --target=minor"
+        },
+        {
+          "exec": "yarn install --check-files"
+        },
+        {
+          "exec": "yarn upgrade"
+        },
+        {
+          "exec": "npx projen"
+        },
+        {
+          "spawn": "post-upgrade"
+        }
+      ]
+    },
+    "watch": {
+      "name": "watch",
+      "description": "Watches changes in your source code and rebuilds and deploys to the current account",
+      "steps": [
+        {
+          "exec": "cdk deploy --hotswap"
+        },
+        {
+          "exec": "cdk watch"
         }
       ]
     }
