--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,3 @@
 {
-  "tabWidth": 2,
-  "semi": true,
-  "singleQuote": true,
-  "printWidth": 150,
-  "endOfLine": "lf",
-  "trailingComma": "all"
+  "overrides": []
 }
