--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 * text=auto eol=lf
 /.eslintrc.json linguist-generated
 /.gitattributes linguist-generated
+/.github/workflows/auto-approve.yml linguist-generated
 /.github/workflows/build.yml linguist-generated
 /.github/workflows/pull-request-lint.yml linguist-generated
 /.github/workflows/upgrade.yml linguist-generated
